feat: Knowledge→Fact integration + critical fixes + FactExtractor math extraction
Option C Integration:
- FactExtractor: 2-pass extraction from Knowledge summaries
  Pass 1: relationships (FACT: subject|predicate|object) → graph at 0.8 confidence
  Pass 2: math formulas (FORMULA: name|expr|keywords + SCRIPT:) → FactStore
- Auto-generated Groovy scripts safety-checked (blocked patterns, 500 char max)
- Wired into KnowledgeScheduler.refreshTopic() via SchedulerCommand
- /know query now shows both text results + verified relationships
- FactEngine.addRelationship() with contradiction check before adding

Confidence-scored edges:
- RelationshipGraph.Edge now has confidence field (1.0 static, 0.8 extracted)
- addTriple overload with confidence parameter

Runtime fact addition:
- FactStore.addRelationship() and addMathFact() for dynamic additions
- FactEngine.addRelationship() validates before adding

Critical fixes:
- Keyword false positives: require 2+ keyword matches for math injection
- Groovy evaluator: per-evaluation fresh thread (no permanent blocking)
- Pre-goal knowledge: removed 45s blocking wait (non-blocking schedule)
- RelationshipGraph: CopyOnWriteArrayList for thread safety
- RelationshipValidator: now checks 'replaces' contradictions too
- FactEngine.shutdown() wired in ShutdownHandler
- Removed dead code (INVERSE_PREDICATES, CONTRADICTIONS)
- verifyMath/validateMath: partial key match (circle_area finds geometry.circle_area)
- VerifyFactTool.getEngine() accessor for unified /know query

Updated README_fe.md with Option C documentation.

552 tests, 0 failures